@@ -882,7 +882,10 @@ pointEdit.detectors.errorParsingHighLimit=Error parsing low range value
 pointEdit.detectors.errorParsingLowLimit=Error parsing high range value
 pointEdit.detectors.withinRange=Within range
 pointEdit.detectors.outsideRange=Outside range
-
+pointEdit.detectors.higher=Higher
+pointEdit.detectors.notHigher=Not higher
+pointEdit.detectors.lower=Lower
+pointEdit.detectors.notLower=Not lower
 
 
 pointEdit.error.missingDataPoint=Missing data point, was it deleted?
@@ -1281,6 +1284,10 @@ event.detector.highLimit={0} has exceeded {1}
 event.detector.highLimitPeriod={0} has exceeded {1} for more than {2}
 event.detector.lowLimit={0} is below {1}
 event.detector.lowLimitPeriod={0} has been below {1} for more than {2}
+event.detector.highLimitNotHigher={0} has not exceeded {1}
+event.detector.highLimitNotHigherPeriod={0} has not exceeded {1} for more than {2}
+event.detector.lowLimitNotLower={0} is not below {1}
+event.detector.lowLimitNotLowerPeriod={0} has not been below {1} for more than {2}
 event.detector.change={0} has changed state {1} times within {2}
 event.detector.noChange={0} has not changed for over {1}
 event.detector.noUpdate={0} has not been updated for over {1}
@@ -1303,6 +1310,10 @@ event.detectorVo.highLimit=When value is higher than {0}
 event.detectorVo.highLimitPeriod=When value is higher than {0} for {1}
 event.detectorVo.lowLimit=When value is lower than {0}
 event.detectorVo.lowLimitPeriod=When value is lower than {0} for {1}
+event.detectorVo.highLimitNotHigher=When value is not higher {0}
+event.detectorVo.highLimitNotHigherPeriod=When value is not higher than {0} for {1}
+event.detectorVo.lowLimitNotLower=When value is not lower than {0}
+event.detectorVo.lowLimitNotLowerPeriod=When value is not lower than {0} for {1}
 event.detectorVo.state=When state is {0}
 event.detectorVo.statePeriod=When state is {0} for {1}
 event.detectorVo.change=When value changes
